Wrap bug lists on release note pages. (Fixes #921)

--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -123,6 +123,7 @@
     p {
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       justify-content: left;
       gap: 1rem;
     }
